idf_component_register(SRCS "real_time_stats_example_main.c"
                            "station_wifi.c"
                            "MultNodeCom/utils/crc16.c"
                            "MultNodeCom/utils/getTimeStamp.c"
                            "MultNodeCom/utils/utilsAssert.c"
                            "MultNodeCom/utils/utilsPrintf.c"
                            "MultNodeCom/bus_driver/bus_serial_driver.c"
                            "MultNodeCom/bus_core/bus_driver.c"
                            "MultNodeCom/bus_core/route_handle.c"
                            "MultNodeCom/bus_core/route_interface.c"
                            "MultNodeCom/bus_core/route_protocol.c"
                            "MultNodeCom/3rd_part/ringbuffer.c"
                            "MultNodeCom/bus_device/bus_serial_device.c"
                    INCLUDE_DIRS "."
                                 "MultNodeCom/bus_device"
                                 "MultNodeCom/utils"
                                 "MultNodeCom/bus_driver"
                                 "MultNodeCom/bus_core"
                                 "MultNodeCom/3rd_part"
                                 )
